# Nuclear-Engine

./: .gitattributes  .gitignore  .gitmodules  .gitmodules.bak  BuildDependencies.bat  CMakeLists.txt  CopyDependenciesBinaries.bat  CopyModulesBinaries.bat  FEATURES.md  LICENSE.md  Nuclear Engine.sln  Nuclear Project.sln  README.md  ROADMAP.md  RunCmakeForDependencies.bat  ThirdPartyLibsVersion.txt.txt  appveyor.yml
Nuclear.Engine/: CMakeLists.txt  Nuclear.Engine.vcxproj
Nuclear.Engine/Source/: Client.cpp  Engine.cpp  Game.cpp
Nuclear.Engine/Source/Animation/: AnimationClip.cpp  Animator.cpp  Bone.cpp
Nuclear.Engine/Source/Assets/: Animations.cpp  AssetImporter.cpp  AssetLibrary.cpp  AssetManager.cpp  AudioClip.cpp  DefaultMeshes.cpp  Font.cpp  IAsset.cpp  Image.cpp  Importer.cpp  Loader.cpp  Material.cpp  Mesh.cpp  Model.cpp  SavedScene.cpp  Scene.cpp  Script.cpp  Shader.cpp  Texture.cpp
Nuclear.Engine/Source/Audio/: AudioConverter.h  AudioEngine.cpp  AudioModule.cpp  FMODError.h
Nuclear.Engine/Source/Components/: AudioListenerComponent.cpp  AudioSourceComponent.cpp  CameraComponent.cpp  ColliderComponent.cpp  DirLightComponent.cpp  EntityInfoComponent.cpp  LightComponent.cpp  MeshComponent.cpp  PointLightComponent.cpp  RigidBodyComponent.cpp  ScriptComponent.cpp  SpotLightComponent.cpp  SpriteRenderer.cpp
Nuclear.Engine/Source/Core/: Client.cpp  Engine.cpp  FileSystem.cpp  Logger.cpp  Path.cpp  Scene.cpp  UUID.cpp  Window.cpp
Nuclear.Engine/Source/ECS/: Entity.cpp  System.cpp  Transform.cpp
Nuclear.Engine/Source/Fallbacks/: FallbacksEngine.cpp  FallbacksModule.cpp
Nuclear.Engine/Source/Graphics/: Camera.cpp  Color.cpp  Context.cpp  GraphicsEngine.cpp  GraphicsModule.cpp  InitializeDiligentEngineWin32.h  RenderTarget.cpp  ShaderPipeline.cpp  ShaderPipelineSwitch.cpp  ShaderPipelineVariant.cpp  ShaderPipelineVariantFactory.cpp  Texture.cpp
Nuclear.Engine/Source/Importers/: AssetsImporter.cpp  AssimpImporter.cpp  FreeImageImporter.cpp
Nuclear.Engine/Source/Managers/: AssetManager.cpp  SceneManager.cpp  ShaderManager.cpp
Nuclear.Engine/Source/Parsers/: INIParser.cpp  INIReader.cpp  ShaderParser.cpp  XMLParser.cpp
Nuclear.Engine/Source/PhysX/: PhysXEngine.cpp  PhysXMaterial.cpp  PhysXModule.cpp  PhysXShape.cpp  PhysXTypes.h  RaycastHit.cpp  RigidDynamic.cpp  RigidStatic.cpp
Nuclear.Engine/Source/Platform/: FileSystem.cpp  Input.cpp  Window.cpp
Nuclear.Engine/Source/Rendering/: Background.cpp  BlurEffect.cpp  GBuffer.cpp  ImageBasedLighting.cpp  RenderingEngine.cpp  RenderingModule.cpp  RenderingPath.cpp  Skybox.cpp
Nuclear.Engine/Source/Scripting/: ScriptingAssembly.cpp  ScriptingBindings.cpp  ScriptingClass.cpp  ScriptingEngine.cpp  ScriptingModule.cpp  ScriptingObject.cpp  ScriptingRegistry.cpp
Nuclear.Engine/Source/Serialization/: SerializationEngine.cpp  SerializationModule.cpp
Nuclear.Engine/Source/Systems/: AudioSystem.cpp  CameraSystem.cpp  DebugSystem.cpp  PhysXSystem.cpp  RenderSystem.cpp  ScriptingSystem.cpp
Nuclear.Engine/Source/Threading/: Task.cpp  ThreadPool.cpp  ThreadingEngine.cpp  ThreadingModule.cpp
Nuclear.Engine/Source/Utilities/: DataBlob.cpp  Logger.cpp  Timer.cpp  UUID.cpp
Nuclear.Engine/include/: Client.h  Compiler.h  Engine.h  Game.h  NE_Common.h  NE_Compiler.h  NuclearEngine.h
Nuclear.Engine/include/Animation/: Animation.h  AnimationClip.h  Animator.h  Bone.h
Nuclear.Engine/include/Assets/: Animations.h  AssetImporter.h  AssetLibrary.h  AssetLoadingDesc.h  AssetManager.h  AssetMetadata.h  AssetPtr.h  AssetType.h  Assets.h  AudioClip.h  Common.h  DefaultMeshes.h  Font.h  IAsset.h  Image.h  ImageData.h  Importer.h  ImportingDescs.h  Loader.h  LoadingDescs.h  Material.h  MaterialTypes.h  Mesh.h  Model.h  SavedScene.h  Scene.h  Script.h  Shader.h  Texture.h  TextureDesc.h  TextureTypes.h
Nuclear.Engine/include/Audio/: Audio.h  AudioBackend.h  AudioDevice.h  AudioEngine.h  AudioFile.h  AudioModule.h  config.h
Nuclear.Engine/include/Components/: AudioListenerComponent.h  AudioSourceComponent.h  CameraComponent.h  ColliderComponent.h  Components.h  DirLightComponent.h  EntityInfoComponent.h  LightCommon.h  LightComponent.h  MeshComponent.h  PointLightComponent.h  RigidBodyComponent.h  ScriptComponent.h  ShaderStructs.h  SpotLightComponent.h  SpriteRenderer.h
Nuclear.Engine/include/Core/: BuildConfig.h  Client.h  Core.h  Engine.h  EngineModule.h  FileSystem.h  Input.h  Logger.h  NE_Common.h  Path.h  Scene.h  UUID.h  Window.h
Nuclear.Engine/include/ECS/: Common.h  ECS.h  Entity.h  System.h  Transform.h
Nuclear.Engine/include/Fallbacks/: Fallbacks.h  FallbacksEngine.h  FallbacksModule.h
Nuclear.Engine/include/Graphics/: BakeStatus.h  Camera.h  Color.h  Context.h  Graphics.h  GraphicsEngine.h  GraphicsEngineDesc.h  GraphicsModule.h  GraphicsModuleDesc.h  RenderTarget.h  ShaderPipeline.h  ShaderPipelineSwitch.h  ShaderPipelineVariant.h  ShaderPipelineVariantFactory.h  ShaderReflection.h  ShaderTypes.h  Texture.h  TextureUsageType.h  imconfig.h
Nuclear.Engine/include/Importers/: AssetsImporter.h  AssimpImporter.h  Common.h  FreeImageImporter.h  Importers.h
Nuclear.Engine/include/Interfaces/: NonCopyable.h  Singleton.h
Nuclear.Engine/include/Managers/: AssetManager.h  Managers.h  SceneManager.h  ShaderManager.h
Nuclear.Engine/include/Math/: Math.h  NETypes.h
Nuclear.Engine/include/Parsers/: INIParser.h  INIReader.h  ShaderParser.h  XMLParser.h
Nuclear.Engine/include/PhysX/: Geometry.h  PhysX.h  PhysXEngine.h  PhysXMaterial.h  PhysXModule.h  PhysXShape.h  RaycastHit.h  RigidDynamic.h  RigidStatic.h
Nuclear.Engine/include/Platform/: FileSystem.h  Input.h  Platform.h  Window.h
Nuclear.Engine/include/Profiling/: Profiler.h  ProfilingModule.h
Nuclear.Engine/include/Rendering/: Background.h  BlurEffect.h  FrameRenderData.h  GBuffer.h  ImageBasedLighting.h  PBRCapture.h  PostProcessingLayer.h  RenderPass.h  Rendering.h  RenderingEngine.h  RenderingModule.h  RenderingPath.h  Skybox.h
Nuclear.Engine/include/Scripting/: Scripting.h  ScriptingAssembly.h  ScriptingBindings.h  ScriptingClass.h  (+4 more)
(+2054 files in other folders)
