project(Nuclear.Engine 
		VERSION 0.0
        DESCRIPTION "Nuclear Engine by Zone Org."
        LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(INCLUDE 
    Source/Assets/Importers/AssimpGLMHelpers.h
    Source/Assets/Importers/AssimpImporter.h
    Source/Audio/OpenAL/OpenALBackend.h
    Source/Audio/XAudio/XAudioBackend.h
    Source/Graphics/ImGUI/imgui_freetype.h
    Source/Graphics/ImGUI/imgui_impl.h
    Source/Graphics/ImGUI/imgui_impl_sdl.h
    Source/Graphics/ImGUI/imgui_internal.h
    Source/Graphics/ImGUI/imstb_rectpack.h
    Source/Graphics/ImGUI/imstb_textedit.h
    Source/Graphics/ImGUI/imstb_truetype.h
    Source/Graphics/InitializeDiligentEngineWin32.h
    Source/PhysX/PhysXTypes.h
    Source/ThirdParty/DiligentTextureLoader/src/BCTools.h
    Source/ThirdParty/DiligentTextureLoader/src/Image.h
    Source/ThirdParty/DiligentTextureLoader/src/TextureLoader.h
    Source/ThirdParty/DiligentTextureLoader/src/TextureLoaderImpl.hpp
    Source/ThirdParty/DiligentTextureLoader/src/TextureUtilities.h
    Source/ThirdParty/DiligentTextureLoader/src/dxgiformat.h
    Source/ThirdParty/DiligentTextureLoader/src/stb_dxt.h
    Source/ThirdParty/crc32c/crc32c_arm64.h
    Source/ThirdParty/crc32c/crc32c_arm64_linux_check.h
    Source/ThirdParty/crc32c/crc32c_config.h
    Source/ThirdParty/crc32c/crc32c_internal.h
    Source/ThirdParty/crc32c/crc32c_prefetch.h
    Source/ThirdParty/crc32c/crc32c_read_le.h
    Source/ThirdParty/crc32c/crc32c_round_up.h
    Source/ThirdParty/crc32c/crc32c_sse42.h
    Source/ThirdParty/crc32c/crc32c_sse42_check.h
    Source/ThirdParty/stb_truetype.h
    include/Animation/Animation.h
    include/Animation/AnimationClip.h
    include/Animation/Animator.h
    include/Animation/Bone.h
    include/Animation/BoneInfo.h
    include/Assets/Animations.h
    include/Assets/AssetLibrary.h
    include/Assets/AssetManager.h
    include/Assets/AssetMetadata.h
    include/Assets/AssetType.h
    include/Assets/Assets.h
    include/Assets/AudioClip.h
    include/Assets/DefaultMeshes.h
    include/Assets/Font.h
    include/Assets/IAsset.h
    include/Assets/Importer.h
    include/Assets/Importers/AssimpManager.h
    include/Assets/Importers/Model.h
    include/Assets/Importers/TextureImporter.h
    include/Assets/ImportingDescs.h
    include/Assets/Loader.h
    include/Assets/LoadingDescs.h
    include/Assets/Material.h
    include/Assets/MaterialTypes.h
    include/Assets/Mesh.h
    include/Assets/Scene.h
    include/Assets/Script.h
    include/Assets/Shader.h
    include/Assets/Tasks/MaterialImportTask.h
    include/Assets/Tasks/MaterialLoadTask.h
    include/Assets/Tasks/MeshCreateTask.h
    include/Assets/Tasks/MeshImportTask.h
    include/Assets/Tasks/MeshLoadTask.h
    include/Assets/Tasks/ShaderLoadTask.h
    include/Assets/Tasks/TextureCreateTask.h
    include/Assets/Tasks/TextureImportTask.h
    include/Assets/Tasks/TextureLoadTask.h
    include/Assets/Texture.h
    include/Assets/TextureDesc.h
    include/Audio/Audio.h
    include/Audio/AudioBackend.h
    include/Audio/AudioDevice.h
    include/Audio/AudioEngine.h
    include/Audio/config.h
    include/Components/AudioListenerComponent.h
    include/Components/AudioSourceComponent.h
    include/Components/CameraComponent.h
    include/Components/ColliderComponent.h
    include/Components/Components.h
    include/Components/EntityInfoComponent.h
    include/Components/LightComponent.h
    include/Components/MeshComponent.h
    include/Components/RigidBodyComponent.h
    include/Components/ScriptComponent.h
    include/Components/ShaderStructs.h
    include/Core/Client.h
    include/Core/Core.h
    include/Core/Engine.h
    include/Core/Path.h
    include/Core/Scene.h
    include/Core/UUID.h
    include/ECS/Common.h
    include/ECS/ECS.h
    include/ECS/Entity.h
    include/ECS/System.h
    include/ECS/Transform.h
    include/Fallbacks/Fallbacks.h
    include/Fallbacks/FallbacksEngine.h
    include/Graphics/BakeStatus.h
    include/Graphics/Color.h
    include/Graphics/Context.h
    include/Graphics/Graphics.h
    include/Graphics/GraphicsEngine.h
    include/Graphics/ImGui.h
    include/Graphics/RenderTarget.h
    include/Graphics/ShaderPipeline.h
    include/Graphics/ShaderPipelineSwitch.h
    include/Graphics/ShaderPipelineVariant.h
    include/Graphics/ShaderReflection.h
    include/Graphics/ShaderTypes.h
    include/Graphics/imconfig.h
    include/Interfaces/NonCopyable.h
    include/Math/Math.h
    include/Math/NETypes.h
    include/Math/glm/common.hpp
    include/Math/glm/detail/_features.hpp
    include/Math/glm/detail/_fixes.hpp
    include/Math/glm/detail/_noise.hpp
    include/Math/glm/detail/_swizzle.hpp
    include/Math/glm/detail/_swizzle_func.hpp
    include/Math/glm/detail/_vectorize.hpp
    include/Math/glm/detail/compute_vector_relational.hpp
    include/Math/glm/detail/func_common.inl
    include/Math/glm/detail/func_common_simd.inl
    include/Math/glm/detail/func_exponential.inl
    include/Math/glm/detail/func_exponential_simd.inl
    include/Math/glm/detail/func_geometric.inl
    include/Math/glm/detail/func_geometric_simd.inl
    include/Math/glm/detail/func_integer.inl
    include/Math/glm/detail/func_integer_simd.inl
    include/Math/glm/detail/func_matrix.inl
    include/Math/glm/detail/func_matrix_simd.inl
    include/Math/glm/detail/func_packing.inl
    include/Math/glm/detail/func_packing_simd.inl
    include/Math/glm/detail/func_trigonometric.inl
    include/Math/glm/detail/func_trigonometric_simd.inl
    include/Math/glm/detail/func_vector_relational.inl
    include/Math/glm/detail/func_vector_relational_simd.inl
    include/Math/glm/detail/qualifier.hpp
    include/Math/glm/detail/setup.hpp
    include/Math/glm/detail/type_float.hpp
    include/Math/glm/detail/type_gentype.hpp
    include/Math/glm/detail/type_gentype.inl
    include/Math/glm/detail/type_half.hpp
    include/Math/glm/detail/type_half.inl
    include/Math/glm/detail/type_int.hpp
    include/Math/glm/detail/type_mat.hpp
    include/Math/glm/detail/type_mat.inl
    include/Math/glm/detail/type_mat2x2.hpp
    include/Math/glm/detail/type_mat2x2.inl
    include/Math/glm/detail/type_mat2x3.hpp
    include/Math/glm/detail/type_mat2x3.inl
    include/Math/glm/detail/type_mat2x4.hpp
    include/Math/glm/detail/type_mat2x4.inl
    include/Math/glm/detail/type_mat3x2.hpp
    include/Math/glm/detail/type_mat3x2.inl
    include/Math/glm/detail/type_mat3x3.hpp
    include/Math/glm/detail/type_mat3x3.inl
    include/Math/glm/detail/type_mat3x4.hpp
    include/Math/glm/detail/type_mat3x4.inl
    include/Math/glm/detail/type_mat4x2.hpp
    include/Math/glm/detail/type_mat4x2.inl
    include/Math/glm/detail/type_mat4x3.hpp
    include/Math/glm/detail/type_mat4x3.inl
    include/Math/glm/detail/type_mat4x4.hpp
    include/Math/glm/detail/type_mat4x4.inl
    include/Math/glm/detail/type_mat4x4_simd.inl
    include/Math/glm/detail/type_vec.hpp
    include/Math/glm/detail/type_vec.inl
    include/Math/glm/detail/type_vec1.hpp
    include/Math/glm/detail/type_vec1.inl
    include/Math/glm/detail/type_vec2.hpp
    include/Math/glm/detail/type_vec2.inl
    include/Math/glm/detail/type_vec3.hpp
    include/Math/glm/detail/type_vec3.inl
    include/Math/glm/detail/type_vec4.hpp
    include/Math/glm/detail/type_vec4.inl
    include/Math/glm/detail/type_vec4_simd.inl
    include/Math/glm/exponential.hpp
    include/Math/glm/ext.hpp
    include/Math/glm/ext/vec1.hpp
    include/Math/glm/ext/vec1.inl
    include/Math/glm/ext/vector_relational.hpp
    include/Math/glm/ext/vector_relational.inl
    include/Math/glm/fwd.hpp
    include/Math/glm/geometric.hpp
    include/Math/glm/glm.hpp
    include/Math/glm/gtc/bitfield.hpp
    include/Math/glm/gtc/bitfield.inl
    include/Math/glm/gtc/color_space.hpp
    include/Math/glm/gtc/color_space.inl
    include/Math/glm/gtc/constants.hpp
    include/Math/glm/gtc/constants.inl
    include/Math/glm/gtc/epsilon.hpp
    include/Math/glm/gtc/epsilon.inl
    include/Math/glm/gtc/integer.hpp
    include/Math/glm/gtc/integer.inl
    include/Math/glm/gtc/matrix_access.hpp
    include/Math/glm/gtc/matrix_access.inl
    include/Math/glm/gtc/matrix_integer.hpp
    include/Math/glm/gtc/matrix_inverse.hpp
    include/Math/glm/gtc/matrix_inverse.inl
    include/Math/glm/gtc/matrix_transform.hpp
    include/Math/glm/gtc/matrix_transform.inl
    include/Math/glm/gtc/noise.hpp
    include/Math/glm/gtc/noise.inl
    include/Math/glm/gtc/packing.hpp
    include/Math/glm/gtc/packing.inl
    include/Math/glm/gtc/quaternion.hpp
    include/Math/glm/gtc/quaternion.inl
    include/Math/glm/gtc/quaternion_simd.inl
    include/Math/glm/gtc/random.hpp
    include/Math/glm/gtc/random.inl
    include/Math/glm/gtc/reciprocal.hpp
    include/Math/glm/gtc/reciprocal.inl
    include/Math/glm/gtc/round.hpp
    include/Math/glm/gtc/round.inl
    include/Math/glm/gtc/type_aligned.hpp
    include/Math/glm/gtc/type_precision.hpp
    include/Math/glm/gtc/type_precision.inl
    include/Math/glm/gtc/type_ptr.hpp
    include/Math/glm/gtc/type_ptr.inl
    include/Math/glm/gtc/ulp.hpp
    include/Math/glm/gtc/ulp.inl
    include/Math/glm/gtc/vec1.hpp
    include/Math/glm/gtc/vec1.inl
    include/Math/glm/gtx/associated_min_max.hpp
    include/Math/glm/gtx/associated_min_max.inl
    include/Math/glm/gtx/bit.hpp
    include/Math/glm/gtx/bit.inl
    include/Math/glm/gtx/closest_point.hpp
    include/Math/glm/gtx/closest_point.inl
    include/Math/glm/gtx/color_encoding.hpp
    include/Math/glm/gtx/color_encoding.inl
    include/Math/glm/gtx/color_space.hpp
    include/Math/glm/gtx/color_space.inl
    include/Math/glm/gtx/color_space_YCoCg.hpp
    include/Math/glm/gtx/color_space_YCoCg.inl
    include/Math/glm/gtx/common.hpp
    include/Math/glm/gtx/common.inl
    include/Math/glm/gtx/compatibility.hpp
    include/Math/glm/gtx/compatibility.inl
    include/Math/glm/gtx/component_wise.hpp
    include/Math/glm/gtx/component_wise.inl
    include/Math/glm/gtx/dual_quaternion.hpp
    include/Math/glm/gtx/dual_quaternion.inl
    include/Math/glm/gtx/euler_angles.hpp
    include/Math/glm/gtx/euler_angles.inl
    include/Math/glm/gtx/extend.hpp
    include/Math/glm/gtx/extend.inl
    include/Math/glm/gtx/extended_min_max.hpp
    include/Math/glm/gtx/extended_min_max.inl
    include/Math/glm/gtx/exterior_product.hpp
    include/Math/glm/gtx/exterior_product.inl
    include/Math/glm/gtx/fast_exponential.hpp
    include/Math/glm/gtx/fast_exponential.inl
    include/Math/glm/gtx/fast_square_root.hpp
    include/Math/glm/gtx/fast_square_root.inl
    include/Math/glm/gtx/fast_trigonometry.hpp
    include/Math/glm/gtx/fast_trigonometry.inl
    include/Math/glm/gtx/float_notmalize.inl
    include/Math/glm/gtx/functions.hpp
    include/Math/glm/gtx/functions.inl
    include/Math/glm/gtx/gradient_paint.hpp
    include/Math/glm/gtx/gradient_paint.inl
    include/Math/glm/gtx/handed_coordinate_space.hpp
    include/Math/glm/gtx/handed_coordinate_space.inl
    include/Math/glm/gtx/hash.hpp
    include/Math/glm/gtx/hash.inl
    include/Math/glm/gtx/integer.hpp
    include/Math/glm/gtx/integer.inl
    include/Math/glm/gtx/intersect.hpp
    include/Math/glm/gtx/intersect.inl
    include/Math/glm/gtx/io.hpp
    include/Math/glm/gtx/io.inl
    include/Math/glm/gtx/log_base.hpp
    include/Math/glm/gtx/log_base.inl
    include/Math/glm/gtx/matrix_cross_product.hpp
    include/Math/glm/gtx/matrix_cross_product.inl
    include/Math/glm/gtx/matrix_decompose.hpp
    include/Math/glm/gtx/matrix_decompose.inl
    include/Math/glm/gtx/matrix_factorisation.hpp
    include/Math/glm/gtx/matrix_factorisation.inl
    include/Math/glm/gtx/matrix_interpolation.hpp
    include/Math/glm/gtx/matrix_interpolation.inl
    include/Math/glm/gtx/matrix_major_storage.hpp
    include/Math/glm/gtx/matrix_major_storage.inl
    include/Math/glm/gtx/matrix_operation.hpp
    include/Math/glm/gtx/matrix_operation.inl
    include/Math/glm/gtx/matrix_query.hpp
    include/Math/glm/gtx/matrix_query.inl
    include/Math/glm/gtx/matrix_transform_2d.hpp
    include/Math/glm/gtx/matrix_transform_2d.inl
    include/Math/glm/gtx/mixed_product.hpp
    include/Math/glm/gtx/mixed_product.inl
    include/Math/glm/gtx/norm.hpp
    include/Math/glm/gtx/norm.inl
    include/Math/glm/gtx/normal.hpp
    include/Math/glm/gtx/normal.inl
    include/Math/glm/gtx/normalize_dot.hpp
    include/Math/glm/gtx/normalize_dot.inl
    include/Math/glm/gtx/number_precision.hpp
    include/Math/glm/gtx/number_precision.inl
    include/Math/glm/gtx/optimum_pow.hpp
    include/Math/glm/gtx/optimum_pow.inl
    include/Math/glm/gtx/orthonormalize.hpp
    include/Math/glm/gtx/orthonormalize.inl
    include/Math/glm/gtx/perpendicular.hpp
    include/Math/glm/gtx/perpendicular.inl
    include/Math/glm/gtx/polar_coordinates.hpp
    include/Math/glm/gtx/polar_coordinates.inl
    include/Math/glm/gtx/projection.hpp
    include/Math/glm/gtx/projection.inl
    include/Math/glm/gtx/quaternion.hpp
    include/Math/glm/gtx/quaternion.inl
    include/Math/glm/gtx/range.hpp
    include/Math/glm/gtx/raw_data.hpp
    include/Math/glm/gtx/raw_data.inl
    include/Math/glm/gtx/rotate_normalized_axis.hpp
    include/Math/glm/gtx/rotate_normalized_axis.inl
    include/Math/glm/gtx/rotate_vector.hpp
    include/Math/glm/gtx/rotate_vector.inl
    include/Math/glm/gtx/scalar_multiplication.hpp
    include/Math/glm/gtx/scalar_relational.hpp
    include/Math/glm/gtx/scalar_relational.inl
    include/Math/glm/gtx/spline.hpp
    include/Math/glm/gtx/spline.inl
    include/Math/glm/gtx/std_based_type.hpp
    include/Math/glm/gtx/std_based_type.inl
    include/Math/glm/gtx/string_cast.hpp
    include/Math/glm/gtx/string_cast.inl
    include/Math/glm/gtx/texture.hpp
    include/Math/glm/gtx/texture.inl
    include/Math/glm/gtx/transform.hpp
    include/Math/glm/gtx/transform.inl
    include/Math/glm/gtx/transform2.hpp
    include/Math/glm/gtx/transform2.inl
    include/Math/glm/gtx/type_aligned.hpp
    include/Math/glm/gtx/type_aligned.inl
    include/Math/glm/gtx/type_trait.hpp
    include/Math/glm/gtx/type_trait.inl
    include/Math/glm/gtx/vec_swizzle.hpp
    include/Math/glm/gtx/vector_angle.hpp
    include/Math/glm/gtx/vector_angle.inl
    include/Math/glm/gtx/vector_query.hpp
    include/Math/glm/gtx/vector_query.inl
    include/Math/glm/gtx/wrap.hpp
    include/Math/glm/gtx/wrap.inl
    include/Math/glm/integer.hpp
    include/Math/glm/mat2x2.hpp
    include/Math/glm/mat2x3.hpp
    include/Math/glm/mat2x4.hpp
    include/Math/glm/mat3x2.hpp
    include/Math/glm/mat3x3.hpp
    include/Math/glm/mat3x4.hpp
    include/Math/glm/mat4x2.hpp
    include/Math/glm/mat4x3.hpp
    include/Math/glm/mat4x4.hpp
    include/Math/glm/matrix.hpp
    include/Math/glm/packing.hpp
    include/Math/glm/simd/common.h
    include/Math/glm/simd/exponential.h
    include/Math/glm/simd/geometric.h
    include/Math/glm/simd/integer.h
    include/Math/glm/simd/matrix.h
    include/Math/glm/simd/packing.h
    include/Math/glm/simd/platform.h
    include/Math/glm/simd/trigonometric.h
    include/Math/glm/simd/vector_relational.h
    include/Math/glm/trigonometric.hpp
    include/Math/glm/vec2.hpp
    include/Math/glm/vec3.hpp
    include/Math/glm/vec4.hpp
    include/Math/glm/vector_relational.hpp
    include/NE_Common.h
    include/NuclearEngine.h
    include/Parsers/INIParser.h
    include/Parsers/ShaderParser.h
    include/Parsers/impl/array.h
    include/Parsers/impl/array.inl
    include/Parsers/impl/at_path.h
    include/Parsers/impl/at_path.inl
    include/Parsers/impl/date_time.h
    include/Parsers/impl/formatter.h
    include/Parsers/impl/formatter.inl
    include/Parsers/impl/forward_declarations.h
    include/Parsers/impl/header_end.h
    include/Parsers/impl/header_start.h
    include/Parsers/impl/json_formatter.h
    include/Parsers/impl/json_formatter.inl
    include/Parsers/impl/key.h
    include/Parsers/impl/make_node.h
    include/Parsers/impl/node.h
    include/Parsers/impl/node.inl
    include/Parsers/impl/node_view.h
    include/Parsers/impl/parse_error.h
    include/Parsers/impl/parse_result.h
    include/Parsers/impl/parser.h
    include/Parsers/impl/parser.inl
    include/Parsers/impl/path.h
    include/Parsers/impl/path.inl
    include/Parsers/impl/preprocessor.h
    include/Parsers/impl/print_to_stream.h
    include/Parsers/impl/print_to_stream.inl
    include/Parsers/impl/simd.h
    include/Parsers/impl/source_region.h
    include/Parsers/impl/std_except.h
    include/Parsers/impl/std_initializer_list.h
    include/Parsers/impl/std_map.h
    include/Parsers/impl/std_new.h
    include/Parsers/impl/std_optional.h
    include/Parsers/impl/std_string.h
    include/Parsers/impl/std_string.inl
    include/Parsers/impl/std_utility.h
    include/Parsers/impl/std_variant.h
    include/Parsers/impl/std_vector.h
    include/Parsers/impl/table.h
    include/Parsers/impl/table.inl
    include/Parsers/impl/toml_formatter.h
    include/Parsers/impl/toml_formatter.inl
    include/Parsers/impl/unicode.h
    include/Parsers/impl/unicode.inl
    include/Parsers/impl/unicode_autogenerated.h
    include/Parsers/impl/value.h
    include/Parsers/impl/version.h
    include/Parsers/impl/yaml_formatter.h
    include/Parsers/impl/yaml_formatter.inl
    include/Parsers/toml.h
    include/PhysX/Geometry.h
    include/PhysX/PhysX.h
    include/PhysX/PhysXEngine.h
    include/PhysX/PhysXMaterial.h
    include/PhysX/PhysXShape.h
    include/PhysX/RaycastHit.h
    include/PhysX/RigidDynamic.h
    include/PhysX/RigidStatic.h
    include/Platform/FileSystem.h
    include/Platform/Input.h
    include/Platform/Platform.h
    include/Platform/Window.h
    include/Rendering/Background.h
    include/Rendering/BlurEffect.h
    include/Rendering/FrameRenderData.h
    include/Rendering/GBuffer.h
    include/Rendering/ImageBasedLighting.h
    include/Rendering/PBRCapture.h
    include/Rendering/PostProcessingLayer.h
    include/Rendering/RenderPass.h
    include/Rendering/RenderPasses/DefferedPass.h
    include/Rendering/RenderPasses/GeometryPass.h
    include/Rendering/RenderPasses/PostProcessingPass.h
    include/Rendering/RenderPasses/ShadowPass.h
    include/Rendering/Rendering.h
    include/Rendering/RenderingEngine.h
    include/Rendering/RenderingPath.h
    include/Rendering/RenderingPaths/DefferedRenderingPath.h
    include/Rendering/RenderingPaths/ForwardRenderingPath.h
    include/Rendering/Skybox.h
    include/Scripting/MonoDeclarations.h
    include/Scripting/Scripting.h
    include/Scripting/ScriptingAssembly.h
    include/Scripting/ScriptingBindings.h
    include/Scripting/ScriptingClass.h
    include/Scripting/ScriptingEngine.h
    include/Scripting/ScriptingObject.h
    include/Scripting/ScriptingRegistry.h
    include/Serialization/Access.h
    include/Serialization/AssetsSerialization.h
    include/Serialization/BinaryBuffer.h
    include/Serialization/DiligentSerialization.h
    include/Serialization/IsLoading.h
    include/Serialization/MathSerialization.h
    include/Serialization/SceneArchive.h
    include/Serialization/Serialization.h
    include/Serialization/SerializationEngine.h
    include/Systems/AudioSystem.h
    include/Systems/DebugSystem.h
    include/Systems/PhysXSystem.h
    include/Systems/RenderSystem.h
    include/Systems/ScriptingSystem.h
    include/Systems/Systems.h
    include/ThirdParty/concurrentqueue.h
    include/ThirdParty/crc32c.h
    include/ThirdParty/magic_enum.hpp
    include/ThirdParty/nameof.hpp
    include/Threading/ConcurrentQueue.h
    include/Threading/ConcurrentTaskQueue.h
    include/Threading/DelegateTask.h
    include/Threading/MainThreadTask.h
    include/Threading/Task.h
    include/Threading/ThreadPool.h
    include/Threading/ThreadingEngine.h
    include/Types/String.h
    include/Types/StringTable.h
    include/Utilities/DataBlob.h
    include/Utilities/Delegate.h
    include/Utilities/Hash.h
    include/Utilities/Logger.h
    include/Utilities/Timer.h
    include/Utilities/Utilities.h
)

set(SOURCES
    Source/Animation/AnimationClip.cpp
    Source/Animation/Animator.cpp
    Source/Animation/Bone.cpp
    Source/Assets/Animations.cpp
    Source/Assets/AssetLibrary.cpp
    Source/Assets/AssetManager.cpp
    Source/Assets/AudioClip.cpp
    Source/Assets/DefaultMeshes.cpp
    Source/Assets/Font.cpp
    Source/Assets/IAsset.cpp
    Source/Assets/Importer.cpp
    Source/Assets/Importers/AssimpImporter.cpp
    Source/Assets/Importers/AssimpManager.cpp
    Source/Assets/Importers/TextureImporter.cpp
    Source/Assets/Loader.cpp
    Source/Assets/Material.cpp
    Source/Assets/Mesh.cpp
    Source/Assets/Script.cpp
    Source/Assets/Shader.cpp
    Source/Assets/Texture.cpp
    Source/Audio/AudioEngine.cpp
    Source/Audio/OpenAL/OpenALBackend.cpp
    Source/Audio/XAudio/XAudioBackend.cpp
    Source/Components/AudioSourceComponent.cpp
    Source/Components/CameraComponent.cpp
    Source/Components/ColliderComponent.cpp
    Source/Components/EntityInfoComponent.cpp
    Source/Components/LightComponent.cpp
    Source/Components/MeshComponent.cpp
    Source/Components/RigidBodyComponent.cpp
    Source/Components/ScriptComponent.cpp
    Source/Core/Client.cpp
    Source/Core/Engine.cpp
    Source/Core/Path.cpp
    Source/Core/Scene.cpp
    Source/Core/UUID.cpp
    Source/ECS/Entity.cpp
    Source/ECS/System.cpp
    Source/ECS/Transform.cpp
    Source/Fallbacks/FallbacksEngine.cpp
    Source/Graphics/Color.cpp
    Source/Graphics/Context.cpp
    Source/Graphics/GraphicsEngine.cpp
    Source/Graphics/ImGUI/imgui.cpp
    Source/Graphics/ImGUI/imgui_draw.cpp
    Source/Graphics/ImGUI/imgui_freetype.cpp
    Source/Graphics/ImGUI/imgui_impl.cpp
    Source/Graphics/ImGUI/imgui_impl_sdl.cpp
    Source/Graphics/ImGUI/imgui_tables.cpp
    Source/Graphics/ImGUI/imgui_widgets.cpp
    Source/Graphics/RenderTarget.cpp
    Source/Graphics/ShaderPipeline.cpp
    Source/Graphics/ShaderPipelineSwitch.cpp
    Source/Graphics/ShaderPipelineVariant.cpp
    Source/Parsers/INIParser.cpp
    Source/Parsers/ShaderParser.cpp
    Source/PhysX/PhysXEngine.cpp
    Source/PhysX/PhysXMaterial.cpp
    Source/PhysX/PhysXShape.cpp
    Source/PhysX/RaycastHit.cpp
    Source/PhysX/RigidDynamic.cpp
    Source/PhysX/RigidStatic.cpp
    Source/Platform/FileSystem.cpp
    Source/Platform/Input.cpp
    Source/Platform/Win32/dllmain.cpp
    Source/Platform/Window.cpp
    Source/Rendering/Background.cpp
    Source/Rendering/BlurEffect.cpp
    Source/Rendering/GBuffer.cpp
    Source/Rendering/ImageBasedLighting.cpp
    Source/Rendering/RenderPasses/DefferedPass.cpp
    Source/Rendering/RenderPasses/GeometryPass.cpp
    Source/Rendering/RenderPasses/PostProcessingPass.cpp
    Source/Rendering/RenderPasses/ShadowPass.cpp
    Source/Rendering/RenderingEngine.cpp
    Source/Rendering/RenderingPath.cpp
    Source/Rendering/RenderingPaths/DefferedRenderingPath.cpp
    Source/Rendering/RenderingPaths/ForwardRenderingPath.cpp
    Source/Rendering/Skybox.cpp
    Source/Scripting/ScriptingAssembly.cpp
    Source/Scripting/ScriptingBindings.cpp
    Source/Scripting/ScriptingClass.cpp
    Source/Scripting/ScriptingEngine.cpp
    Source/Scripting/ScriptingObject.cpp
    Source/Scripting/ScriptingRegistry.cpp
    Source/Serialization/SerializationEngine.cpp
    Source/Systems/DebugSystem.cpp
    Source/Systems/PhysXSystem.cpp
    Source/Systems/RenderSystem.cpp
    Source/Systems/ScriptingSystem.cpp
    Source/ThirdParty/DiligentTextureLoader/src/BCTools.cpp
    Source/ThirdParty/DiligentTextureLoader/src/DDSLoader.cpp
    Source/ThirdParty/DiligentTextureLoader/src/DImage.cpp
    Source/ThirdParty/DiligentTextureLoader/src/KTXLoader.cpp
    Source/ThirdParty/DiligentTextureLoader/src/STBImpl.cpp
    Source/ThirdParty/DiligentTextureLoader/src/TextureLoaderImpl.cpp
    Source/ThirdParty/DiligentTextureLoader/src/TextureUtilities.cpp
    Source/ThirdParty/crc32c/crc32c.cc
    Source/ThirdParty/crc32c/crc32c_arm64.cc
    Source/ThirdParty/crc32c/crc32c_portable.cc
    Source/ThirdParty/crc32c/crc32c_sse42.cc
    Source/Threading/Task.cpp
    Source/Threading/ThreadPool.cpp
    Source/Threading/ThreadingEngine.cpp
    Source/Utilities/DataBlob.cpp
    Source/Utilities/Logger.cpp
    Source/Utilities/Timer.cpp
)


add_library(${PROJECT_NAME}  SHARED 
    ${SOURCES} ${INCLUDE}
)

add_library(Nuclear::Engine ALIAS ${PROJECT_NAME} )


target_include_directories(${PROJECT_NAME}
    PUBLIC
        ${PROJECT_SOURCE_DIR}/include
)

target_link_libraries(${PROJECT_NAME} 
    DiligentCore
    Assimp
    OpenAL
)